[gd_scene load_steps=11 format=3 uid="uid://cw872ipu7028l"]

[ext_resource type="Script" path="res://scenes/misc/caisse_ouvrable.gd" id="1_on2xo"]
[ext_resource type="PackedScene" uid="uid://bcqrpa0n73vl8" path="res://scenes/misc/caisse_ouverte.tscn" id="1_vvdqp"]
[ext_resource type="PackedScene" uid="uid://dgpvmfs7a0iw4" path="res://scenes/misc/caisse_top.tscn" id="2_4pji2"]
[ext_resource type="AudioStream" uid="uid://c6h35vs5was0a" path="res://sons/wood-creak-single-v3-14657.wav" id="3_puxfk"]
[ext_resource type="AudioStream" uid="uid://bcntwvymthfns" path="res://sons/wood-crack-4-88688.wav" id="4_5fmou"]
[ext_resource type="AudioStream" uid="uid://c33yp0sjcu0o1" path="res://sons/sliding-object-in-draw-95689.wav" id="5_g7vxv"]

[sub_resource type="Animation" id="Animation_cqtcq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("caisse_top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.26, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("caisse_top:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_i3meg"]
resource_name = "ouverture"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("caisse_top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2, 3.5, 4.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.26, 0), Vector3(0.0110097, 0.272005, 0), Vector3(0.0721347, 0.351761, 0), Vector3(0.0288774, 0.721121, 0), Vector3(-0.0781857, 0.219579, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("caisse_top:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 2, 3.5, 4.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.0412596), Vector3(0, 0, 0.284628), Vector3(0, 0, 1.36815), Vector3(0, 0, 1.36815)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("audio_scroutch:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("audio_crack:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("audio_slide:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_un83c"]
_data = {
"RESET": SubResource("Animation_cqtcq"),
"ouverture": SubResource("Animation_i3meg")
}

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_8rl4v"]
data = PackedVector3Array(-1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, -0.96, 1, 0.96, -1, 1, -1, -0.96, 1, -0.96, -1, 1, 1, 0.96, 1, 0.96, 1, 1, 1, -0.96, 1, 0.96, -1, 1, 1, -1, 1, -1, -1, 1, 1, -0.96, 1, 0.96, 0.96, 1, 0.96, 0.96, 1, -0.96, 1, 1, 1, 0.96, 1, 0.96, 1, 1, -1, -0.96, 1, -0.96, -1, 1, -1, 0.96, 1, -0.96, 1, 1, -1, 1, 1, 1, 1, 1, -1, 0.96, 1, -0.96, -0.96, 1, -0.96, -0.96, -0.7292, 0.96, -0.96, -0.96, -0.96, -0.96, -0.96, 0.96, -0.96, -0.7292, 0.96, -0.96, -0.7292, -0.96, -0.96, -0.96, -0.96, -0.96, -0.7292, -0.96, -0.96, 0.96, 0.96, -0.96, 0.96, -0.96, -0.96, -0.7292, -0.96, -0.96, -0.7292, 0.96, -0.96, 0.96, 0.96, -0.96, -0.7292, -0.96, 0.96, -0.96, -0.96, -0.96, -0.96, -0.96, -0.96, -0.7292, -0.96, 0.96, -0.7292, -0.96, 0.96, -0.96, -0.96, 0.96, -0.7292, -0.96, -0.96, 0.96, -0.96, 0.96, 0.96, -0.96, 0.96, -0.7292, -0.96, -0.96, -0.7292, -0.96, -0.96, 0.96, -0.96, 0.96, -0.7292, -0.96, 0.96, -0.96, 0.96, 0.96, -0.96, -0.96, 0.96, -0.7292, -0.96, 0.96, -0.7292, 0.96, 0.96, -0.96, 0.96, 0.96, 0.96, 0.96, 0.96, -0.7292, -0.96, 0.96, 0.96, -0.96, 0.96, 0.96, 0.96, 0.96, -0.7292, 0.96, 0.96, -0.7292, -0.96, 0.96, -0.7292, 0.96, -0.96, -0.96, 0.96, 0.96, -0.96, 0.96, 0.96, -0.7292, 0.96, -0.96, -0.7292, 0.96, -0.96, -0.96, 0.96, -0.96, 0.96, 0.96, 0.96, -0.7292, 0.96, 0.96, 0.96, 0.96, -0.96, 0.96, 0.96, -0.96, -0.7292, 0.96, 0.96, -0.7292, 0.96, -0.96, -0.96, -0.96, 0.96, -0.96, 0.96, -0.96, -0.96, 0.96, -0.96, -0.96, -0.96, 0.96, -0.96, -0.96, 0.96, -0.96, 0.96, -0.96, 1, 0.96, -0.96, 0.96, -0.96, -0.96, 0.96, 0.96, -0.96, 1, 0.96, -0.96, 1, -0.96, -0.96, 0.96, -0.96, -0.96, 1, -0.96, 0.96, 0.96, -0.96, -0.96, 0.96, -0.96, -0.96, 1, -0.96, 0.96, 1, -0.96, 0.96, 0.96, -0.96, 0.96, 1, -0.96, 0.96, 0.96, 0.96, 0.96, 0.96, -0.96, 0.96, 1, -0.96, 0.96, 1, 0.96, 0.96, 0.96, 0.96, 0.96, 1, 0.96, -0.96, 0.96, 0.96, 0.96, 0.96, 0.96, 0.96, 1, 0.96, -0.96, 1, 0.96, -0.96, 0.96, 0.96, -1, 0.9998, -1.0596, -1, 0.7998, -1, -1, 0.7998, -1.0596, -1, 0.9998, -1.0596, -1, 0.9998, -1, -1, 0.7998, -1, -1, 0.7998, 1.0596, -1, 0.9998, 1, -1, 0.9998, 1.0596, -1, 0.7998, 1.0596, -1, 0.7998, 1, -1, 0.9998, 1, -1, 0.7998, -1.0596, 1, 0.9998, -1.0596, -1, 0.9998, -1.0596, -1, 0.7998, -1.0596, 1, 0.7998, -1.0596, 1, 0.9998, -1.0596, 1, 0.9998, 1, 1, 0.7998, 1.0596, 1, 0.9998, 1.0596, 1, 0.9998, 1, 1, 0.7998, 1, 1, 0.7998, 1.0596, 1, 0.7998, -1, 1, 0.9998, -1.0596, 1, 0.7998, -1.0596, 1, 0.7998, -1, 1, 0.9998, -1, 1, 0.9998, -1.0596, 1, 0.7998, 1.0596, -1, 0.9998, 1.0596, 1, 0.9998, 1.0596, 1, 0.7998, 1.0596, -1, 0.7998, 1.0596, -1, 0.9998, 1.0596, 1, 0.7998, 1.0596, -1, 0.7998, 1, -1, 0.7998, 1.0596, 1, 0.7998, 1.0596, 1, 0.7998, 1, -1, 0.7998, 1, -1, 0.7998, -1, 1, 0.7998, -1.0596, -1, 0.7998, -1.0596, -1, 0.7998, -1, 1, 0.7998, -1, 1, 0.7998, -1.0596, -1, 0.9998, 1, 1, 0.9998, 1.0596, -1, 0.9998, 1.0596, -1, 0.9998, 1, 1, 0.9998, 1, 1, 0.9998, 1.0596, 1, 0.9998, -1, -1, 0.9998, -1.0596, 1, 0.9998, -1.0596, 1, 0.9998, -1, -1, 0.9998, -1, -1, 0.9998, -1.0596, 1, 0.9998, -1, -1, 0.7998, -1, -1, 0.9998, -1, 1, 0.9998, -1, 1, 0.7998, -1, -1, 0.7998, -1, -1, 0.9998, 1, 1, 0.7998, 1, 1, 0.9998, 1, -1, 0.9998, 1, -1, 0.7998, 1, 1, 0.7998, 1, -1, -0.7985, -1.0596, -1, -0.9984, -1, -1, -0.9984, -1.0596, -1, -0.7985, -1.0596, -1, -0.7985, -1, -1, -0.9984, -1, -1, -0.9984, 1.0596, -1, -0.7985, 1, -1, -0.7985, 1.0596, -1, -0.9984, 1.0596, -1, -0.9984, 1, -1, -0.7985, 1, -1, -0.9984, -1.0596, 1, -0.7985, -1.0596, -1, -0.7985, -1.0596, -1, -0.9984, -1.0596, 1, -0.9984, -1.0596, 1, -0.7985, -1.0596, 1, -0.7985, 1, 1, -0.9984, 1.0596, 1, -0.7985, 1.0596, 1, -0.7985, 1, 1, -0.9984, 1, 1, -0.9984, 1.0596, 1, -0.9984, -1, 1, -0.7985, -1.0596, 1, -0.9984, -1.0596, 1, -0.9984, -1, 1, -0.7985, -1, 1, -0.7985, -1.0596, 1, -0.9984, 1.0596, -1, -0.7985, 1.0596, 1, -0.7985, 1.0596, 1, -0.9984, 1.0596, -1, -0.9984, 1.0596, -1, -0.7985, 1.0596, 1, -0.9984, 1.0596, -1, -0.9984, 1, -1, -0.9984, 1.0596, 1, -0.9984, 1.0596, 1, -0.9984, 1, -1, -0.9984, 1, -1, -0.9984, -1, 1, -0.9984, -1.0596, -1, -0.9984, -1.0596, -1, -0.9984, -1, 1, -0.9984, -1, 1, -0.9984, -1.0596, -1, -0.7985, 1, 1, -0.7985, 1.0596, -1, -0.7985, 1.0596, -1, -0.7985, 1, 1, -0.7985, 1, 1, -0.7985, 1.0596, 1, -0.7985, -1, -1, -0.7985, -1.0596, 1, -0.7985, -1.0596, 1, -0.7985, -1, -1, -0.7985, -1, -1, -0.7985, -1.0596, -1, -0.9984, -1, 1, -0.7985, -1, 1, -0.9984, -1, -1, -0.9984, -1, -1, -0.7985, -1, 1, -0.7985, -1, 1, -0.9984, 1, -1, -0.7985, 1, -1, -0.9984, 1, 1, -0.9984, 1, 1, -0.7985, 1, -1, -0.7985, 1, -1.001, 0.8061, -1.047, -1.001, -0.8061, -1, -1.001, -0.8061, -1.047, -1.001, 0.8061, -1.047, -1.001, 0.8061, -1, -1.001, -0.8061, -1, -1.001, -0.8061, 1.047, -1.001, 0.8061, 1, -1.001, 0.8061, 1.047, -1.001, -0.8061, 1.047, -1.001, -0.8061, 1, -1.001, 0.8061, 1, -1.001, -0.8061, -1.047, -0.789, 0.8061, -1.047, -1.001, 0.8061, -1.047, -1.001, -0.8061, -1.047, -0.789, -0.8061, -1.047, -0.789, 0.8061, -1.047, -0.789, 0.8061, 1.047, -0.789, -0.8061, 1, -0.789, -0.8061, 1.047, -0.789, 0.8061, 1.047, -0.789, 0.8061, 1, -0.789, -0.8061, 1, -0.789, -0.8061, -1.047, -0.789, 0.8061, -1, -0.789, 0.8061, -1.047, -0.789, -0.8061, -1.047, -0.789, -0.8061, -1, -0.789, 0.8061, -1, -0.789, -0.8061, 1.047, -1.001, 0.8061, 1.047, -0.789, 0.8061, 1.047, -0.789, -0.8061, 1.047, -1.001, -0.8061, 1.047, -1.001, 0.8061, 1.047, -0.789, -0.8061, 1.047, -1.001, -0.8061, 1, -1.001, -0.8061, 1.047, -0.789, -0.8061, 1.047, -0.789, -0.8061, 1, -1.001, -0.8061, 1, -1.001, -0.8061, -1, -0.789, -0.8061, -1.047, -1.001, -0.8061, -1.047, -1.001, -0.8061, -1, -0.789, -0.8061, -1, -0.789, -0.8061, -1.047, -1.001, 0.8061, 1, -0.789, 0.8061, 1.047, -1.001, 0.8061, 1.047, -1.001, 0.8061, 1, -0.789, 0.8061, 1, -0.789, 0.8061, 1.047, -0.789, 0.8061, -1, -1.001, 0.8061, -1.047, -0.789, 0.8061, -1.047, -0.789, 0.8061, -1, -1.001, 0.8061, -1, -1.001, 0.8061, -1.047, -0.789, -0.8061, -1, -1.001, 0.8061, -1, -0.789, 0.8061, -1, -0.789, -0.8061, -1, -1.001, -0.8061, -1, -1.001, 0.8061, -1, -1.001, 0.8061, 1, -0.789, -0.8061, 1, -0.789, 0.8061, 1, -1.001, 0.8061, 1, -1.001, -0.8061, 1, -0.789, -0.8061, 1, 0.7873, 0.8061, -1.047, 0.7873, -0.8061, -1, 0.7873, -0.8061, -1.047, 0.7873, 0.8061, -1.047, 0.7873, 0.8061, -1, 0.7873, -0.8061, -1, 0.7873, -0.8061, 1.047, 0.7873, 0.8061, 1, 0.7873, 0.8061, 1.047, 0.7873, -0.8061, 1.047, 0.7873, -0.8061, 1, 0.7873, 0.8061, 1, 0.7873, -0.8061, -1.047, 0.9992, 0.8061, -1.047, 0.7873, 0.8061, -1.047, 0.7873, -0.8061, -1.047, 0.9992, -0.8061, -1.047, 0.9992, 0.8061, -1.047, 0.9992, 0.8061, 1.047, 0.9992, -0.8061, 1, 0.9992, -0.8061, 1.047, 0.9992, 0.8061, 1.047, 0.9992, 0.8061, 1, 0.9992, -0.8061, 1, 0.9992, -0.8061, -1.047, 0.9992, 0.8061, -1, 0.9992, 0.8061, -1.047, 0.9992, -0.8061, -1.047, 0.9992, -0.8061, -1, 0.9992, 0.8061, -1, 0.9992, -0.8061, 1.047, 0.7873, 0.8061, 1.047, 0.9992, 0.8061, 1.047, 0.9992, -0.8061, 1.047, 0.7873, -0.8061, 1.047, 0.7873, 0.8061, 1.047, 0.9992, -0.8061, 1.047, 0.7873, -0.8061, 1, 0.7873, -0.8061, 1.047, 0.9992, -0.8061, 1.047, 0.9992, -0.8061, 1, 0.7873, -0.8061, 1, 0.7873, -0.8061, -1, 0.9992, -0.8061, -1.047, 0.7873, -0.8061, -1.047, 0.7873, -0.8061, -1, 0.9992, -0.8061, -1, 0.9992, -0.8061, -1.047, 0.7873, 0.8061, 1, 0.9992, 0.8061, 1.047, 0.7873, 0.8061, 1.047, 0.7873, 0.8061, 1, 0.9992, 0.8061, 1, 0.9992, 0.8061, 1.047, 0.9992, 0.8061, -1, 0.7873, 0.8061, -1.047, 0.9992, 0.8061, -1.047, 0.9992, 0.8061, -1, 0.7873, 0.8061, -1, 0.7873, 0.8061, -1.047, 0.9992, -0.8061, -1, 0.7873, 0.8061, -1, 0.9992, 0.8061, -1, 0.9992, -0.8061, -1, 0.7873, -0.8061, -1, 0.7873, 0.8061, -1, 0.7873, 0.8061, 1, 0.9992, -0.8061, 1, 0.9992, 0.8061, 1, 0.7873, 0.8061, 1, 0.7873, -0.8061, 1, 0.9992, -0.8061, 1, -1.0592, -1, 1.0575, -1.0592, 1, 0.8589, -1.0592, 1, 1.0575, -1.0592, -1, 1.0575, -1.0592, -1, 0.8589, -1.0592, 1, 0.8589, 1, 1, 0.8589, 1.0592, -1, 0.8589, 1.0592, 1, 0.8589, 1, 1, 0.8589, 1, -1, 0.8589, 1.0592, -1, 0.8589, -1.0592, -1, 0.8589, -1, 1, 0.8589, -1.0592, 1, 0.8589, -1.0592, -1, 0.8589, -1, -1, 0.8589, -1, 1, 0.8589, 1.0592, -1, 0.8589, 1.0592, 1, 1.0575, 1.0592, 1, 0.8589, 1.0592, -1, 0.8589, 1.0592, -1, 1.0575, 1.0592, 1, 1.0575, -1.0592, 1, 1.0575, -1, -1, 1.0575, -1.0592, -1, 1.0575, -1.0592, 1, 1.0575, -1, 1, 1.0575, -1, -1, 1.0575, 1, -1, 1.0575, 1.0592, 1, 1.0575, 1.0592, -1, 1.0575, 1, -1, 1.0575, 1, 1, 1.0575, 1.0592, 1, 1.0575, 1.0592, -1, 0.8589, 1, -1, 1.0575, 1.0592, -1, 1.0575, 1.0592, -1, 0.8589, 1, -1, 0.8589, 1, -1, 1.0575, -1.0592, -1, 1.0575, -1, -1, 0.8589, -1.0592, -1, 0.8589, -1.0592, -1, 1.0575, -1, -1, 1.0575, -1, -1, 0.8589, -1, 1, 0.8589, -1.0592, 1, 1.0575, -1.0592, 1, 0.8589, -1, 1, 0.8589, -1, 1, 1.0575, -1.0592, 1, 1.0575, 1, 1, 1.0575, 1.0592, 1, 0.8589, 1.0592, 1, 1.0575, 1, 1, 1.0575, 1, 1, 0.8589, 1.0592, 1, 0.8589, -1, -1, 0.8589, -1, 1, 1.0575, -1, 1, 0.8589, -1, -1, 0.8589, -1, -1, 1.0575, -1, 1, 1.0575, 1, 1, 1.0575, 1, -1, 0.8589, 1, 1, 0.8589, 1, 1, 1.0575, 1, -1, 1.0575, 1, -1, 0.8589, -1.0592, -1, -0.8538, -1.0592, 1, -1.0524, -1.0592, 1, -0.8538, -1.0592, -1, -0.8538, -1.0592, -1, -1.0524, -1.0592, 1, -1.0524, 1, 1, -1.0524, 1.0592, -1, -1.0524, 1.0592, 1, -1.0524, 1, 1, -1.0524, 1, -1, -1.0524, 1.0592, -1, -1.0524, -1.0592, -1, -1.0524, -1, 1, -1.0524, -1.0592, 1, -1.0524, -1.0592, -1, -1.0524, -1, -1, -1.0524, -1, 1, -1.0524, 1.0592, -1, -1.0524, 1.0592, 1, -0.8538, 1.0592, 1, -1.0524, 1.0592, -1, -1.0524, 1.0592, -1, -0.8538, 1.0592, 1, -0.8538, -1.0592, 1, -0.8538, -1, -1, -0.8538, -1.0592, -1, -0.8538, -1.0592, 1, -0.8538, -1, 1, -0.8538, -1, -1, -0.8538, 1, -1, -0.8538, 1.0592, 1, -0.8538, 1.0592, -1, -0.8538, 1, -1, -0.8538, 1, 1, -0.8538, 1.0592, 1, -0.8538, 1.0592, -1, -1.0524, 1, -1, -0.8538, 1.0592, -1, -0.8538, 1.0592, -1, -1.0524, 1, -1, -1.0524, 1, -1, -0.8538, -1.0592, -1, -0.8538, -1, -1, -1.0524, -1.0592, -1, -1.0524, -1.0592, -1, -0.8538, -1, -1, -0.8538, -1, -1, -1.0524, -1, 1, -1.0524, -1.0592, 1, -0.8538, -1.0592, 1, -1.0524, -1, 1, -1.0524, -1, 1, -0.8538, -1.0592, 1, -0.8538, 1, 1, -0.8538, 1.0592, 1, -1.0524, 1.0592, 1, -0.8538, 1, 1, -0.8538, 1, 1, -1.0524, 1.0592, 1, -1.0524, -1, -1, -1.0524, -1, 1, -0.8538, -1, 1, -1.0524, -1, -1, -1.0524, -1, -1, -0.8538, -1, 1, -0.8538, 1, 1, -0.8538, 1, -1, -1.0524, 1, 1, -1.0524, 1, 1, -0.8538, 1, -1, -0.8538, 1, -1, -1.0524, -1.053, -0.9958, 0.8629, -1.053, -0.8096, -0.8629, -1.053, -0.8096, 0.8629, -1.053, -0.9958, 0.8629, -1.053, -0.9958, -0.8629, -1.053, -0.8096, -0.8629, 1.0529, -0.8096, -0.8629, 1, -0.9958, -0.8629, 1.0529, -0.9958, -0.8629, 1.0529, -0.8096, -0.8629, 1, -0.8096, -0.8629, 1, -0.9958, -0.8629, -1.053, -0.9958, -0.8629, -1, -0.8096, -0.8629, -1.053, -0.8096, -0.8629, -1.053, -0.9958, -0.8629, -1, -0.9958, -0.8629, -1, -0.8096, -0.8629, 1.0529, -0.9958, -0.8629, 1.0529, -0.8096, 0.8629, 1.0529, -0.8096, -0.8629, 1.0529, -0.9958, -0.8629, 1.0529, -0.9958, 0.8629, 1.0529, -0.8096, 0.8629, -1, -0.8096, 0.8629, -1.053, -0.9958, 0.8629, -1.053, -0.8096, 0.8629, -1, -0.8096, 0.8629, -1, -0.9958, 0.8629, -1.053, -0.9958, 0.8629, 1, -0.9958, 0.8629, 1.0529, -0.8096, 0.8629, 1.0529, -0.9958, 0.8629, 1, -0.9958, 0.8629, 1, -0.8096, 0.8629, 1.0529, -0.8096, 0.8629, 1.0529, -0.9958, -0.8629, 1, -0.9958, 0.8629, 1.0529, -0.9958, 0.8629, 1.0529, -0.9958, -0.8629, 1, -0.9958, -0.8629, 1, -0.9958, 0.8629, -1, -0.9958, 0.8629, -1.053, -0.9958, -0.8629, -1.053, -0.9958, 0.8629, -1, -0.9958, 0.8629, -1, -0.9958, -0.8629, -1.053, -0.9958, -0.8629, -1.053, -0.8096, -0.8629, -1, -0.8096, 0.8629, -1.053, -0.8096, 0.8629, -1.053, -0.8096, -0.8629, -1, -0.8096, -0.8629, -1, -0.8096, 0.8629, 1, -0.8096, 0.8629, 1.0529, -0.8096, -0.8629, 1.0529, -0.8096, 0.8629, 1, -0.8096, 0.8629, 1, -0.8096, -0.8629, 1.0529, -0.8096, -0.8629, -1, -0.9958, 0.8629, -1, -0.8096, -0.8629, -1, -0.9958, -0.8629, -1, -0.9958, 0.8629, -1, -0.8096, 0.8629, -1, -0.8096, -0.8629, 1, -0.9958, -0.8629, 1, -0.8096, 0.8629, 1, -0.9958, 0.8629, 1, -0.9958, -0.8629, 1, -0.8096, -0.8629, 1, -0.8096, 0.8629, -1.053, 0.8151, 0.8629, -1.053, 1.0013, -0.8629, -1.053, 1.0013, 0.8629, -1.053, 0.8151, 0.8629, -1.053, 0.8151, -0.8629, -1.053, 1.0013, -0.8629, 1.0529, 1.0013, -0.8629, 1, 0.8151, -0.8629, 1.0529, 0.8151, -0.8629, 1.0529, 1.0013, -0.8629, 1, 1.0013, -0.8629, 1, 0.8151, -0.8629, -1.053, 0.8151, -0.8629, -1, 1.0013, -0.8629, -1.053, 1.0013, -0.8629, -1.053, 0.8151, -0.8629, -1, 0.8151, -0.8629, -1, 1.0013, -0.8629, 1.0529, 0.8151, -0.8629, 1.0529, 1.0013, 0.8629, 1.0529, 1.0013, -0.8629, 1.0529, 0.8151, -0.8629, 1.0529, 0.8151, 0.8629, 1.0529, 1.0013, 0.8629, -1, 1.0013, 0.8629, -1.053, 0.8151, 0.8629, -1.053, 1.0013, 0.8629, -1, 1.0013, 0.8629, -1, 0.8151, 0.8629, -1.053, 0.8151, 0.8629, 1, 0.8151, 0.8629, 1.0529, 1.0013, 0.8629, 1.0529, 0.8151, 0.8629, 1, 0.8151, 0.8629, 1, 1.0013, 0.8629, 1.0529, 1.0013, 0.8629, 1.0529, 0.8151, -0.8629, 1, 0.8151, 0.8629, 1.0529, 0.8151, 0.8629, 1.0529, 0.8151, -0.8629, 1, 0.8151, -0.8629, 1, 0.8151, 0.8629, -1, 0.8151, 0.8629, -1.053, 0.8151, -0.8629, -1.053, 0.8151, 0.8629, -1, 0.8151, 0.8629, -1, 0.8151, -0.8629, -1.053, 0.8151, -0.8629, -1.053, 1.0013, -0.8629, -1, 1.0013, 0.8629, -1.053, 1.0013, 0.8629, -1.053, 1.0013, -0.8629, -1, 1.0013, -0.8629, -1, 1.0013, 0.8629, 1, 1.0013, 0.8629, 1.0529, 1.0013, -0.8629, 1.0529, 1.0013, 0.8629, 1, 1.0013, 0.8629, 1, 1.0013, -0.8629, 1.0529, 1.0013, -0.8629, -1, 0.8151, 0.8629, -1, 1.0013, -0.8629, -1, 0.8151, -0.8629, -1, 0.8151, 0.8629, -1, 1.0013, 0.8629, -1, 1.0013, -0.8629, 1, 0.8151, -0.8629, 1, 1.0013, 0.8629, 1, 0.8151, 0.8629, 1, 0.8151, -0.8629, 1, 1.0013, -0.8629, 1, 1.0013, 0.8629, 1.0575, -1.0376, -1.0641, 0.863, -1, -1.0639, 0.863, -1.0376, -1.0639, 1.0575, -1.0376, -1.0641, 1.0575, -1, -1.0641, 0.863, -1, -1.0639, 1.0601, -1.0376, 1.0586, 1.0575, -1, -1.0641, 1.0575, -1.0376, -1.0641, 1.0601, -1.0376, 1.0586, 1.0601, -1, 1.0586, 1.0575, -1, -1.0641, 0.8656, -1, 1.0588, 1.0601, -1.0376, 1.0586, 0.8656, -1.0376, 1.0588, 0.8656, -1, 1.0588, 1.0601, -1, 1.0586, 1.0601, -1.0376, 1.0586, 0.863, -1, -1.0639, 0.8656, -1.0376, 1.0588, 0.863, -1.0376, -1.0639, 0.863, -1, -1.0639, 0.8656, -1, 1.0588, 0.8656, -1.0376, 1.0588, 1.0575, -1.0376, -1.0641, 0.8656, -1.0376, 1.0588, 1.0601, -1.0376, 1.0586, 1.0575, -1.0376, -1.0641, 0.863, -1.0376, -1.0639, 0.8656, -1.0376, 1.0588, 0.863, -1, -1.0639, 1.0601, -1, 1.0586, 0.8656, -1, 1.0588, 0.863, -1, -1.0639, 1.0575, -1, -1.0641, 1.0601, -1, 1.0586, -0.861, -1.0376, -1.0619, -1.0555, -1, -1.0616, -1.0555, -1.0376, -1.0616, -0.861, -1.0376, -1.0619, -0.861, -1, -1.0619, -1.0555, -1, -1.0616, -0.8585, -1.0376, 1.0608, -0.861, -1, -1.0619, -0.861, -1.0376, -1.0619, -0.8585, -1.0376, 1.0608, -0.8585, -1, 1.0608, -0.861, -1, -1.0619, -1.053, -1, 1.0611, -0.8585, -1.0376, 1.0608, -1.053, -1.0376, 1.0611, -1.053, -1, 1.0611, -0.8585, -1, 1.0608, -0.8585, -1.0376, 1.0608, -1.0555, -1, -1.0616, -1.053, -1.0376, 1.0611, -1.0555, -1.0376, -1.0616, -1.0555, -1, -1.0616, -1.053, -1, 1.0611, -1.053, -1.0376, 1.0611, -0.861, -1.0376, -1.0619, -1.053, -1.0376, 1.0611, -0.8585, -1.0376, 1.0608, -0.861, -1.0376, -1.0619, -1.0555, -1.0376, -1.0616, -1.053, -1.0376, 1.0611, -1.0555, -1, -1.0616, -0.8585, -1, 1.0608, -1.053, -1, 1.0611, -1.0555, -1, -1.0616, -0.861, -1, -1.0619, -0.8585, -1, 1.0608, 0.8685, -1.0325, 0.8454, -0.8655, -1, 0.8475, -0.8655, -1.0325, 0.8475, 0.8685, -1.0325, 0.8454, 0.8685, -1, 0.8454, -0.8655, -1, 0.8475, 0.8687, -1.0325, 1.0594, 0.8685, -1, 0.8454, 0.8685, -1.0325, 0.8454, 0.8687, -1.0325, 1.0594, 0.8687, -1, 1.0594, 0.8685, -1, 0.8454, -0.8653, -1, 1.0615, 0.8687, -1.0325, 1.0594, -0.8653, -1.0325, 1.0615, -0.8653, -1, 1.0615, 0.8687, -1, 1.0594, 0.8687, -1.0325, 1.0594, -0.8655, -1, 0.8475, -0.8653, -1.0325, 1.0615, -0.8655, -1.0325, 0.8475, -0.8655, -1, 0.8475, -0.8653, -1, 1.0615, -0.8653, -1.0325, 1.0615, 0.8685, -1.0325, 0.8454, -0.8653, -1.0325, 1.0615, 0.8687, -1.0325, 1.0594, 0.8685, -1.0325, 0.8454, -0.8655, -1.0325, 0.8475, -0.8653, -1.0325, 1.0615, -0.8653, -1, 1.0615, 0.8685, -1, 0.8454, 0.8687, -1, 1.0594, -0.8653, -1, 1.0615, -0.8655, -1, 0.8475, 0.8685, -1, 0.8454, 0.8648, -1.0325, -1.0603, -0.8691, -1, -1.0583, -0.8691, -1.0325, -1.0583, 0.8648, -1.0325, -1.0603, 0.8648, -1, -1.0603, -0.8691, -1, -1.0583, 0.8651, -1.0325, -0.8463, 0.8648, -1, -1.0603, 0.8648, -1.0325, -1.0603, 0.8651, -1.0325, -0.8463, 0.8651, -1, -0.8463, 0.8648, -1, -1.0603, -0.8689, -1, -0.8443, 0.8651, -1.0325, -0.8463, -0.8689, -1.0325, -0.8443, -0.8689, -1, -0.8443, 0.8651, -1, -0.8463, 0.8651, -1.0325, -0.8463, -0.8691, -1, -1.0583, -0.8689, -1.0325, -0.8443, -0.8691, -1.0325, -1.0583, -0.8691, -1, -1.0583, -0.8689, -1, -0.8443, -0.8689, -1.0325, -0.8443, 0.8648, -1.0325, -1.0603, -0.8689, -1.0325, -0.8443, 0.8651, -1.0325, -0.8463, 0.8648, -1.0325, -1.0603, -0.8691, -1.0325, -1.0583, -0.8689, -1.0325, -0.8443, -0.8689, -1, -0.8443, 0.8648, -1, -1.0603, 0.8651, -1, -0.8463, -0.8689, -1, -0.8443, -0.8691, -1, -1.0583, 0.8648, -1, -1.0603, 0.7579, -1.0231, -0.9772, -0.9943, -1, 0.7354, -0.9943, -1.0231, 0.7354, 0.7579, -1.0231, -0.9772, 0.7579, -1, -0.9772, -0.9943, -1, 0.7354, 0.9942, -1.0231, -0.7354, 0.7579, -1, -0.9772, 0.7579, -1.0231, -0.9772, 0.9942, -1.0231, -0.7354, 0.9942, -1, -0.7354, 0.7579, -1, -0.9772, -0.7579, -1, 0.9772, 0.9942, -1.0231, -0.7354, -0.7579, -1.0231, 0.9772, -0.7579, -1, 0.9772, 0.9942, -1, -0.7354, 0.9942, -1.0231, -0.7354, -0.9943, -1, 0.7354, -0.7579, -1.0231, 0.9772, -0.9943, -1.0231, 0.7354, -0.9943, -1, 0.7354, -0.7579, -1, 0.9772, -0.7579, -1.0231, 0.9772, 0.7579, -1.0231, -0.9772, -0.7579, -1.0231, 0.9772, 0.9942, -1.0231, -0.7354, 0.7579, -1.0231, -0.9772, -0.9943, -1.0231, 0.7354, -0.7579, -1.0231, 0.9772, -0.7579, -1, 0.9772, 0.7579, -1, -0.9772, 0.9942, -1, -0.7354, -0.7579, -1, 0.9772, -0.9943, -1, 0.7354, 0.7579, -1, -0.9772, -1.0473, -0.6839, 0.9859, -1.0473, 0.6839, -0.986, -1.0473, 0.9452, -0.7392, -1.0473, -0.6839, 0.9859, -1.0473, -0.9452, 0.7392, -1.0473, 0.6839, -0.986, 1.0472, 0.6839, -0.986, 1, -0.9452, 0.7392, 1.0472, -0.9452, 0.7392, 1.0472, 0.6839, -0.986, 1, 0.6839, -0.986, 1, -0.9452, 0.7392, -1.0473, -0.9452, 0.7392, -1, 0.6839, -0.986, -1.0473, 0.6839, -0.986, -1.0473, -0.9452, 0.7392, -1, -0.9452, 0.7392, -1, 0.6839, -0.986, 1.0472, -0.9452, 0.7392, 1.0472, 0.9452, -0.7392, 1.0472, 0.6839, -0.986, 1.0472, -0.9452, 0.7392, 1.0472, -0.6839, 0.9859, 1.0472, 0.9452, -0.7392, -1.0473, 0.9452, -0.7392, -1, -0.6839, 0.9859, -1.0473, -0.6839, 0.9859, -1.0473, 0.9452, -0.7392, -1, 0.9452, -0.7392, -1, -0.6839, 0.9859, 1.0472, -0.6839, 0.9859, 1, 0.9452, -0.7392, 1.0472, 0.9452, -0.7392, 1.0472, -0.6839, 0.9859, 1, -0.6839, 0.9859, 1, 0.9452, -0.7392, 1, -0.9452, 0.7392, 1.0472, -0.6839, 0.9859, 1.0472, -0.9452, 0.7392, 1, -0.9452, 0.7392, 1, -0.6839, 0.9859, 1.0472, -0.6839, 0.9859, -1, -0.6839, 0.9859, -1.0473, -0.9452, 0.7392, -1.0473, -0.6839, 0.9859, -1, -0.6839, 0.9859, -1, -0.9452, 0.7392, -1.0473, -0.9452, 0.7392, -1.0473, 0.6839, -0.986, -1, 0.9452, -0.7392, -1.0473, 0.9452, -0.7392, -1.0473, 0.6839, -0.986, -1, 0.6839, -0.986, -1, 0.9452, -0.7392, 1, 0.9452, -0.7392, 1.0472, 0.6839, -0.986, 1.0472, 0.9452, -0.7392, 1, 0.9452, -0.7392, 1, 0.6839, -0.986, 1.0472, 0.6839, -0.986, -1, -0.9452, 0.7392, -1, 0.9452, -0.7392, -1, 0.6839, -0.986, -1, -0.9452, 0.7392, -1, -0.6839, 0.9859, -1, 0.9452, -0.7392, 1, 0.9452, -0.7392, 1, -0.9452, 0.7392, 1, 0.6839, -0.986, 1, 0.9452, -0.7392, 1, -0.6839, 0.9859, 1, -0.9452, 0.7392, 0.6723, 0.918, -1.0457, -0.9042, -0.6909, -1, -0.9042, -0.6909, -1.0457, 0.6723, 0.918, -1.0457, 0.6723, 0.918, -1, -0.9042, -0.6909, -1, -0.9042, -0.6909, 1.0456, 0.6723, 0.918, 1, 0.6723, 0.918, 1.0456, -0.9042, -0.6909, 1.0456, -0.9042, -0.6909, 1, 0.6723, 0.918, 1, -0.9042, -0.6909, -1.0457, 0.9041, 0.6908, -1.0457, 0.6723, 0.918, -1.0457, -0.9042, -0.6909, -1.0457, -0.6723, -0.918, -1.0457, 0.9041, 0.6908, -1.0457, 0.9041, 0.6908, 1.0456, -0.6723, -0.918, 1, -0.6723, -0.918, 1.0456, 0.9041, 0.6908, 1.0456, 0.9041, 0.6908, 1, -0.6723, -0.918, 1, -0.6723, -0.918, -1.0457, 0.9041, 0.6908, -1, 0.9041, 0.6908, -1.0457, -0.6723, -0.918, -1.0457, -0.6723, -0.918, -1, 0.9041, 0.6908, -1, -0.6723, -0.918, 1.0456, 0.6723, 0.918, 1.0456, 0.9041, 0.6908, 1.0456, -0.6723, -0.918, 1.0456, -0.9042, -0.6909, 1.0456, 0.6723, 0.918, 1.0456, -0.6723, -0.918, 1.0456, -0.9042, -0.6909, 1, -0.9042, -0.6909, 1.0456, -0.6723, -0.918, 1.0456, -0.6723, -0.918, 1, -0.9042, -0.6909, 1, -0.9042, -0.6909, -1, -0.6723, -0.918, -1.0457, -0.9042, -0.6909, -1.0457, -0.9042, -0.6909, -1, -0.6723, -0.918, -1, -0.6723, -0.918, -1.0457, 0.6723, 0.918, 1, 0.9041, 0.6908, 1.0456, 0.6723, 0.918, 1.0456, 0.6723, 0.918, 1, 0.9041, 0.6908, 1, 0.9041, 0.6908, 1.0456, 0.9041, 0.6908, -1, 0.6723, 0.918, -1.0457, 0.9041, 0.6908, -1.0457, 0.9041, 0.6908, -1, 0.6723, 0.918, -1, 0.6723, 0.918, -1.0457, -0.6723, -0.918, -1, 0.6723, 0.918, -1, 0.9041, 0.6908, -1, -0.6723, -0.918, -1, -0.9042, -0.6909, -1, 0.6723, 0.918, -1, 0.6723, 0.918, 1, -0.6723, -0.918, 1, 0.9041, 0.6908, 1, 0.6723, 0.918, 1, -0.9042, -0.6909, 1, -0.6723, -0.918, 1)

[node name="caisse_ouvrable" type="Node3D" groups=["ouvrable"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_on2xo")

[node name="caisse_ouverte" parent="." instance=ExtResource("1_vvdqp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.26, 0)

[node name="caisse_top" parent="." instance=ExtResource("2_4pji2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.26, 0)

[node name="anim_caisse" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_un83c")
}

[node name="audio_crack" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_puxfk")

[node name="audio_scroutch" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_5fmou")

[node name="audio_slide" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_g7vxv")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Caisse" type="Node3D" parent="."]

[node name="Caisse" type="Node3D" parent="Caisse" groups=["ouvrable"]]

[node name="Caisse" type="StaticBody3D" parent="Caisse/Caisse" groups=["ouvrable"]]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0.25, 0)
collision_layer = 8
collision_mask = 19

[node name="CollisionShape3D" type="CollisionShape3D" parent="Caisse/Caisse/Caisse"]
shape = SubResource("ConcavePolygonShape3D_8rl4v")

[node name="inspect_progress" type="ProgressBar" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.319
anchor_top = 0.394
anchor_right = 0.678
anchor_bottom = 0.437
offset_left = 0.511993
offset_top = -0.312012
offset_right = -0.0560303
offset_bottom = -0.175995
grow_horizontal = 2
grow_vertical = 2
max_value = 3.0
value = 3.0

[node name="inspect_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="inspect_timer" to="." method="_on_inspect_timer_timeout"]
